--- a/resource.qrc
+++ b/resource.qrc
@@ -23,5 +23,6 @@
         <file>icons/media-record.png</file>
         <file>shaders/gamma.frag</file>
         <file>shaders/morphogradient.frag</file>
+        <file>shaders/polar-convolution.frag</file>
     </qresource>
 </RCC>
