--- a/resource.qrc
+++ b/resource.qrc
@@ -24,5 +24,6 @@
         <file>shaders/gamma.frag</file>
         <file>shaders/morphogradient.frag</file>
         <file>shaders/polar-convolution.frag</file>
+        <file>icons/morphogengl.png</file>
     </qresource>
 </RCC>
