Add value operation

--- a/resource.qrc
+++ b/resource.qrc
@@ -27,5 +27,6 @@
         <file>icons/morphogengl.png</file>
         <file>shaders/hueshift.frag</file>
         <file>shaders/saturation.frag</file>
+        <file>shaders/value.frag</file>
     </qresource>
 </RCC>
