--- a/resource.qrc
+++ b/resource.qrc
@@ -32,5 +32,8 @@
         <file>shaders/rgb.frag</file>
         <file>shaders/rgb.vert</file>
         <file>icons/office-chart-scatter.png</file>
+        <file>icons/video-display.png</file>
+        <file>icons/folder-video.png</file>
+        <file>shaders/clear.frag</file>
     </qresource>
 </RCC>
