--- a/resource.qrc
+++ b/resource.qrc
@@ -54,5 +54,6 @@
         <file>icons/document-encrypt.png</file>
         <file>icons/folder-image.png</file>
         <file>icons/applications-graphics.png</file>
+        <file>shaders/color-quantization.frag</file>
     </qresource>
 </RCC>
