Started coding detach and attach of control widget

--- a/resource.qrc
+++ b/resource.qrc
@@ -61,5 +61,6 @@
         <file>icons/emblem-synchronized.png</file>
         <file>shaders/power.frag</file>
         <file>shaders/median.frag</file>
+        <file>icons/mail-attachment.png</file>
     </qresource>
 </RCC>
