--- a/resource.qrc
+++ b/resource.qrc
@@ -62,5 +62,9 @@
         <file>shaders/power.frag</file>
         <file>shaders/median.frag</file>
         <file>icons/mail-attachment.png</file>
+        <file>shaders/3d.vert</file>
+        <file>shaders/3d.frag</file>
+        <file>icons/list-add.png</file>
+        <file>icons/list-remove.png</file>
     </qresource>
 </RCC>
