--- a/resource.qrc
+++ b/resource.qrc
@@ -76,5 +76,6 @@
         <file>icons/letter-f.png</file>
         <file>icons/letter-v.png</file>
         <file>icons/run-build.png</file>
+        <file>icons/edit-undo.png</file>
     </qresource>
 </RCC>
