Fixed textures generation and unshared VAO

--- a/resource.qrc
+++ b/resource.qrc
@@ -2,7 +2,6 @@
     <qresource prefix="/">
         <file>shaders/blend.frag</file>
         <file>shaders/brightness.frag</file>
-        <file>shaders/random-seed.frag</file>
         <file>shaders/position.vert</file>
         <file>shaders/screen.frag</file>
         <file>shaders/screen.vert</file>
@@ -81,5 +80,7 @@
         <file>shaders/blender.vert</file>
         <file>shaders/identity.vert</file>
         <file>shaders/identity.frag</file>
+        <file>shaders/random.vert</file>
+        <file>shaders/random.frag</file>
     </qresource>
 </RCC>
