--- a/resource.qrc
+++ b/resource.qrc
@@ -84,5 +84,9 @@
         <file>shaders/random.frag</file>
         <file>icons/dialog-ok.png</file>
         <file>icons/view-refresh-2.png</file>
+        <file>icons/zoom-in.png</file>
+        <file>icons/zoom-out.png</file>
+        <file>icons/edit-redo-2.png</file>
+        <file>icons/edit-undo-2.png</file>
     </qresource>
 </RCC>
