Fixed video input management and closing of graphic widgets

--- a/resource.qrc
+++ b/resource.qrc
@@ -90,5 +90,6 @@
         <file>icons/edit-undo-2.png</file>
         <file>icons/go-bottom.png</file>
         <file>icons/camera-web.png</file>
+        <file>icons/logo.png</file>
     </qresource>
 </RCC>
